deployment/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esports-ner-fe
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - esports.pentchev.eu
    secretName: esports-fe-cert
  rules:
  - host: esports.pentchev.eu
    http:
      paths:
      - backend:
          serviceName: esports-ner-fe
          servicePort: 8080
